@@ -3,6 +3,7 @@ Champlain (HDP-2.2) is based on Apache ZooKeeper 3.4.6 (601207e)
 Following are the changes on top of Apache ZooKeeper 3.4.6
 
 Bug fixes:
+ZOOKEEPER-2146 BinaryInputArchive readString should check length before allocating memory
 ZOOKEEPER-2141 ACL cache in DataTree never removes entries (Adam Milne-Smith via camille)
 ZOOKEEPER-1897 ZK Shell/Cli not processing commands (stack via michim)
 ZOOKEEPER-1926 Unit tests should only use build/test/data for data
